# blumdot

./: Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json
src/: App.tsx  lib.rs  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: braille_render.rs  cli.rs
