[package]
name = "blumdot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["blocking"] }
resvg = "0.47.0"
tiny-skia = "0.12.0"

[dev-dependencies]
assert_cmd = "2.2.1"
mockito = "1.7.2"
predicates = "3.1.4"
tempfile = "3.27.0"
